tests/ui-fail/dto_derive_map_attr.stderr
error: could not map already mapped field 'a'
 --> $DIR/dto_derive_map_attr.rs:6:6
  |
6 | #[dto(map = "a: c")] //~ ERROR could not map already mapped field 'a'
  |      ^^^^^^^^^^^^^^

error: aborting due to previous error

